# whatsapp-automessage

./: Cargo.toml  README.md  main.rs
libs/: Cargo.toml
libs/src/: lib.rs
modules/: image.rs  mod.rs  networks.rs
templates/: template.html
