[package]
name = "autest"
version = "0.3.2"
edition = "2021"
authors = ["Ramiz Mammadli <ramosoft94@gmsil.com>"]

[dependencies]
libs = { path = "libs" }
actix-web = "4.4.0"
actix-rt = "2.9.0"
tera = "1.19.1"
env_logger = "0.10"        # Kullanmak istediğiniz sürümü belirtin



[[bin]]
name = "main"
path = "main.rs"
